--- a/cloud-taskmanage/index.html
+++ b/cloud-taskmanage/index.html
@@ -8,6 +8,9 @@
   <title>API Solutions</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+  <!-- <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" /> -->
+
 </head>
 
 <body>
@@ -16,6 +19,9 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
+ 
+
+  <!-- <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script> -->
 
 </body>
 
